# github-bin-downloader

./: Cargo.toml  README.md
.github/workflows/: release.yaml
src/: cli.rs  ghapi.rs  lib.rs  main.rs  sysinfo.rs  utils.rs
