[package]
name = "github-bin-downloader"
version = "0.1.0"
authors = ["353fc443 <353fc443@pm.me> "]
edition = "2018"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
thiserror = "1.0"
indicatif = "0.16.2"
regex = "1.5"
nix = "0.21.0"